Fixing button alignment

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,12 @@ body {
     transition: all ease 0.1s;
 }
 
+.new-note button {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .new-note button:active, .new-note-fixed button:active {
     transform: scale(0.9);
 }
@@ -37,9 +43,8 @@ body {
     font-size: 36px;
     font-weight: bold;
     display: inline-block;
-    vertical-align: middle;
     line-height: normal;
-    margin-top: -16px;
+    vertical-align: text-bottom;
 }
 
 .notes-container {
@@ -73,9 +78,7 @@ body {
         font-size: 27px;
         font-weight: bold;
         display: inline-block;
-        vertical-align: middle;
         line-height: normal;
-        margin-top: -10px;
     }
 
     .notes-container {
